--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   mvc:
     static-path-pattern: /**
   resources:
-    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/templates/,classpath:/static/
+    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/templates/view/,classpath:/static/
 
   datasource:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useSSL=false
@@ -33,7 +33,7 @@ spring:
 
 
   freemarker:
-    prefix: classpath:/templates/
+    prefix: classpath:/templates/view/
     suffix: .html
     cache: false
     encoding: UTF-8
